--- a/Blog-UI/src/app/Components/navbar/navbar.component.html
+++ b/Blog-UI/src/app/Components/navbar/navbar.component.html
@@ -1,1 +1,50 @@
-<p>navbar works!</p>
+<!-- Navbar -->
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <!-- Container wrapper -->
+    <div class="container">
+        <!-- Navbar brand -->
+        <a class="navbar-brand me-2" routerLink=""><strong>Kipyegon Kirui Vitalis Blog</strong></a>
+
+        <!-- Toggle button -->
+        <button class="navbar-toggler" type="button" data-mdb-toggle="collapse" data-mdb-target="#navbarButtonsExample"
+            aria-controls="navbarButtonsExample" aria-expanded="false" aria-label="Toggle navigation">
+            <i class="fas fa-bars"></i>
+        </button>
+
+        <!-- Collapsible wrapper -->
+        <div class="collapse navbar-collapse" id="navbarButtonsExample">
+            <!-- Left links -->
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link" routerLink="" routerLinkActive="active">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" routerLink="contact-me" routerLinkActive="active">Contact Me</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" routerLink="about-blog" routerLinkActive="active">About Blog</a>
+                </li>
+            </ul>
+            <!-- Left links -->
+
+            <div class="d-flex align-items-center mt-2">
+                <ul>
+                    <li class="navbar-nav">
+                        <a class="nav-link" routerLink="authentications/login" routerLinkActive="active"
+                            >Login</a>
+                        <a class="nav-link" routerLink="authentications/register" routerLinkActive="active"
+                            >Register</a>
+                        <a class="nav-link" routerLink="authentications/account" routerLinkActive="active"
+                            >Account</a>
+                        <a class="nav-link" style="cursor: pointer;"
+                            >Logout</a>
+                    </li>
+                </ul>
+
+            </div>
+        </div>
+        <!-- Collapsible wrapper -->
+    </div>
+    <!-- Container wrapper -->
+</nav>
+<!-- Navbar -->
