content on not found page

--- a/Blog-UI/src/app/Components/not-found/not-found.component.html
+++ b/Blog-UI/src/app/Components/not-found/not-found.component.html
@@ -1,1 +1,9 @@
-<p>not-found works!</p>
+<div class="container">
+    <div class="row">
+        <div class="col-md-6 mx-auto text-danger text-center my-2 error404">
+            <h3><strong>Error 404</strong></h3>
+            <hr>
+            <p>Sorry, we couln't find what you are looking for, please check url and try again.</p>
+        </div>
+    </div>
+</div>
