creating registration form

--- a/Blog-UI/src/app/Modules/authentication/Components/register/register.component.html
+++ b/Blog-UI/src/app/Modules/authentication/Components/register/register.component.html
@@ -1,1 +1,68 @@
-<p>register works!</p>
+<div class="container">
+    <div class="row">
+        <div class="col-md-6 mx-auto registration">
+
+            <div class="heading text-center">
+                <h2 class="text-success"><strong>Create Account</strong></h2>
+                <hr>
+            </div>
+
+            <!-- Form -->
+            <form action="" class="form">
+
+                <!-- First name -->
+                <div class="form-group">
+                    <label for="" class="mb-1 mt-3"><strong>First Name</strong></label>
+                    <input type="text" class="form-control">
+                </div>
+
+                <!-- Last name -->
+                <div class="form-group">
+                    <label for="" class="mb-1 mt-3"><strong>Last Name</strong></label>
+                    <input type="text" class="form-control">
+                </div>
+
+                <!-- Username -->
+                <div class="form-group">
+                    <label for="" class="mb-1 mt-3"><strong>Username</strong></label>
+                    <input type="text" class="form-control">
+                </div>
+
+                <!-- Email -->
+                <div class="form-group">
+                    <label for="" class="mb-1 mt-3"><strong>Email</strong></label>
+                    <input type="email" class="form-control">
+                </div>
+
+                <!-- Subcription checkbox -->
+                <div class="form-group pt-4">
+                    <input type="checkbox" class="form-check-input">
+                    <label for="" class="form-check-label"><strong>Subscribe to Newsletter</strong></label>
+                </div>
+
+                <!-- Password -->
+                <div class="form-group">
+                    <label for="" class="mb-1 mt-3"><strong>Password</strong></label>
+                    <input type="password" class="form-control">
+                </div>
+
+                <!-- Confirm Password -->
+                <div class="form-group">
+                    <label for="" class="mb-1 mt-3"><strong>Confirm Password</strong></label>
+                    <input type="password" class="form-control">
+                </div>
+
+                <!-- Register button -->
+                <button class="btn btn-primary m-3" type="submit"><strong>Register</strong></button>
+
+            </form>
+
+            <!-- Already have account -->
+            <div class="already text-center">
+                <p><strong>Already have account?</strong></p>
+                <button class="btn btn-primary " type="button"><strong>Login</strong></button>
+            </div>
+
+        </div>
+    </div>
+</div>
