--- a/Blog-UI/src/app/Modules/authentication/Components/login/login.component.html
+++ b/Blog-UI/src/app/Modules/authentication/Components/login/login.component.html
@@ -1,1 +1,38 @@
-<p>login works!</p>
+<div class="container">
+    <div class="row">
+        <div class="col-md-5 mx-auto login">
+
+            <div class="heading text-center">
+                <h2 class="text-success"><strong>Login</strong></h2>
+                <hr>
+            </div>
+
+            <!-- Form -->
+            <form action="" class="form">
+
+                <!-- Email -->
+                <div class="form-group">
+                    <label for="" class="mb-1 mt-3"><strong>Email</strong></label>
+                    <input type="email" class="form-control">
+                </div>
+
+                <!-- Password -->
+                <div class="form-group">
+                    <label for="" class="mb-1 mt-3"><strong>Password</strong></label>
+                    <input type="password" class="form-control">
+                </div>
+
+                <!-- Register button -->
+                <button class="btn btn-primary m-3" type="submit"><strong>Login</strong></button>
+
+            </form>
+
+            <!-- Already have account -->
+            <div class="already text-center">
+                <p><strong>Don't have account?</strong></p>
+                <button class="btn btn-primary " type="button"><strong>Register</strong></button>
+            </div>
+
+        </div>
+    </div>
+</div>
