switching user to login if they have an exixting account

--- a/Blog-UI/src/app/Modules/authentication/Components/register/register.component.html
+++ b/Blog-UI/src/app/Modules/authentication/Components/register/register.component.html
@@ -60,7 +60,7 @@
             <!-- Already have account -->
             <div class="already text-center">
                 <p><strong>Already have account?</strong></p>
-                <button class="btn btn-primary " type="button"><strong>Login</strong></button>
+                <button class="btn btn-primary " type="button" (click)="switchLogin()"><strong>Login</strong></button>
             </div>
 
         </div>
