switching user to registration if they don't have an account

--- a/Blog-UI/src/app/Modules/authentication/Components/login/login.component.html
+++ b/Blog-UI/src/app/Modules/authentication/Components/login/login.component.html
@@ -30,7 +30,7 @@
             <!-- Already have account -->
             <div class="already text-center">
                 <p><strong>Don't have account?</strong></p>
-                <button class="btn btn-primary " type="button"><strong>Register</strong></button>
+                <button class="btn btn-primary " type="button" (click)="switchRegister()"><strong>Register</strong></button>
             </div>
 
         </div>
