--- a/Blog-UI/src/app/Modules/authentication/Components/register/register.component.html
+++ b/Blog-UI/src/app/Modules/authentication/Components/register/register.component.html
@@ -8,7 +8,7 @@
             </div>
 
             <!-- Form -->
-            <form [formGroup]="registrationForm">
+            <form [formGroup]="registrationForm" (ngSubmit)="submitDetails()">
 
                 <!-- First name -->
                 <div class="form-group">
