conditionally validating email address

--- a/Blog-UI/src/app/Modules/authentication/Components/register/register.component.html
+++ b/Blog-UI/src/app/Modules/authentication/Components/register/register.component.html
@@ -78,6 +78,9 @@
                     <label for="" class="form-check-label"><strong>Subscribe to Newsletter</strong></label>
                 </div>
 
+                <!-- Subscribtion notice -->
+                <small *ngIf="userSubscribed">Subscription of Newsletter demands an email address</small>
+
                 <!-- Password -->
                 <div class="form-group">
                     <label for="" class="mb-1 mt-3"><strong>Password</strong></label>
