disabling register button if form is invalid

--- a/Blog-UI/src/app/Modules/authentication/Components/register/register.component.html
+++ b/Blog-UI/src/app/Modules/authentication/Components/register/register.component.html
@@ -110,7 +110,7 @@
 
 
                 <!-- Register button -->
-                <button class="btn btn-primary m-3" type="submit"><strong>Register</strong></button>
+                <button class="btn btn-primary m-3" type="submit" [disabled]="registrationForm.invalid"><strong>Register</strong></button>
 
             </form>
 
