--- a/Blog-UI/src/app/Modules/authentication/Components/login/login.component.html
+++ b/Blog-UI/src/app/Modules/authentication/Components/login/login.component.html
@@ -13,13 +13,27 @@
                 <!-- Username -->
                 <div class="form-group">
                     <label for="" class="mb-1 mt-3"><strong>Username</strong></label>
-                    <input type="text" class="form-control" name="username" formControlName="username">
+                    <input type="text" class="form-control" name="username" formControlName="username"
+                    [class.is-invalid]="username?.invalid && username?.dirty"
+                    >
+                </div>
+
+                <!-- Username error messages -->
+                <div class="text-danger" *ngIf="username?.errors && username?.dirty">
+                    <small *ngIf="username?.errors?.['required']">Enter your username</small>
                 </div>
 
                 <!-- Password -->
                 <div class="form-group">
                     <label for="" class="mb-1 mt-3"><strong>Password</strong></label>
-                    <input type="password" class="form-control" name="password" formControlName="password">
+                    <input type="password" class="form-control" name="password" formControlName="password"
+                    [class.is-invalid]="password?.invalid && password?.dirty"
+                    >
+                </div>
+
+                <!-- Password error messages -->
+                <div class="text-danger" *ngIf="password?.errors && password?.dirty">
+                    <small *ngIf="password?.errors?.['required']">Enter your password</small>
                 </div>
 
                 <!-- Register button -->
