disabling login button whenever login form is invalid

--- a/Blog-UI/src/app/Modules/authentication/Components/login/login.component.html
+++ b/Blog-UI/src/app/Modules/authentication/Components/login/login.component.html
@@ -37,7 +37,7 @@
                 </div>
 
                 <!-- Register button -->
-                <button class="btn btn-primary m-3" type="submit"><strong>Login</strong></button>
+                <button class="btn btn-primary m-3" type="submit" [disabled]="loginForm.invalid"><strong>Login</strong></button>
 
             </form>
 
