--- a/Blog-UI/src/app/Components/navbar/navbar.component.html
+++ b/Blog-UI/src/app/Components/navbar/navbar.component.html
@@ -3,7 +3,7 @@
     <!-- Container wrapper -->
     <div class="container">
         <!-- Navbar brand -->
-        <a class="navbar-brand me-2" routerLink=""><strong>Kipyegon Kirui Vitalis Blog</strong></a>
+        <a class="navbar-brand me-2" routerLink=""><strong>Kipyegon Kirui Vitalis</strong></a>
 
         <!-- Toggle button -->
         <button class="navbar-toggler" type="button" data-mdb-toggle="collapse" data-mdb-target="#navbarButtonsExample"
@@ -13,6 +13,11 @@
 
         <!-- Collapsible wrapper -->
         <div class="collapse navbar-collapse" id="navbarButtonsExample">
+            <!-- Left links -->
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                
+            </ul>
+            <!-- Left links -->
 
             <div class="d-flex align-items-center mt-2">
                 <ul>
