--- a/Blog-UI/src/app/Modules/admin/admin.component.html
+++ b/Blog-UI/src/app/Modules/admin/admin.component.html
@@ -1,1 +1,23 @@
-<p>admin works!</p>
+<div class="container">
+    <div class="row">
+        <div class="col-md-4 mx-auto my-5 verify">
+
+            <h3 class="text-center text-success"><strong>VERIFY</strong></h3>
+            <hr>
+
+            <!-- Verify form -->
+            <form action="">
+
+                <div class="form-group">
+                    <label for="" class="mb-1"><strong>Enter admin passcode</strong></label>
+                    <input type="text" class="form-control">
+                </div>
+
+                <!-- Submit button -->
+                <button class="btn btn-primary m-3" type="button">Verify</button>
+
+            </form>
+
+        </div>
+    </div>
+</div>
