--- a/Blog-UI/src/app/Modules/admin/admin.component.css
+++ b/Blog-UI/src/app/Modules/admin/admin.component.css
@@ -2,7 +2,7 @@
     background-color: white;
     padding: 3%;
     box-shadow: 0px 0px 2px 0px grey;
-    border-radius: 5%;
+    border-radius: 20px;
 }
 
 hr{
