--- a/Blog-UI/src/app/Modules/admin/admin.component.html
+++ b/Blog-UI/src/app/Modules/admin/admin.component.html
@@ -13,7 +13,7 @@
                     <input type="text" class="form-control" name="passcode" formControlName="passcode"
                     [class.is-invalid]="passcode?.invalid && passcode?.dirty"
                     >
-                    
+
                     <!-- Wrong passcode verification -->
                     <small class="text-danger" *ngIf="errorMessage">Wrong passcode</small>
                 </div>
@@ -29,5 +29,24 @@
             </form>
 
         </div>
+
+        <!-- Admin menu code -->
+        <div class="col-md-6 mx-auto my-5 text-center verify" *ngIf="verified">
+
+            <h3 class="text-success">Admin Panel</h3>
+            <hr>
+
+            <p>
+                These panel got full access to the database and full roles
+                and permissions on operations on the same. It's to help
+                admin manage and track various aspect regarding users and 
+                blogs.
+            </p>
+
+                <button class="btn btn-primary m-3" type="button">Users</button>
+                <button class="btn btn-success m-3" type="button">Blogs</button>
+
+        </div>
+
     </div>
 </div>
