switching users between users and blogs

--- a/Blog-UI/src/app/Modules/admin/admin.component.html
+++ b/Blog-UI/src/app/Modules/admin/admin.component.html
@@ -43,8 +43,8 @@
                 blogs.
             </p>
 
-                <button class="btn btn-primary m-3" type="button">Users</button>
-                <button class="btn btn-success m-3" type="button">Blogs</button>
+                <button class="btn btn-primary m-3" type="button" routerLink="users">Users</button>
+                <button class="btn btn-success m-3" type="button" routerLink="blogs">Blogs</button>
 
         </div>
 
