creating about blog content

--- a/Blog-UI/src/app/Components/about-blog/about-blog.component.html
+++ b/Blog-UI/src/app/Components/about-blog/about-blog.component.html
@@ -1,1 +1,50 @@
-<p>about-blog works!</p>
+<div class="container">
+    <div class="row">
+
+        <div class="col-md-8 mx-auto my-5 text-center aboutTop">
+
+            <!-- Heading -->
+                <h3 class="text-success"><strong>About The Blog</strong></h3>
+                <hr>
+
+                <p>
+                    I am Vitalis, a Full-Stack software developer. I created this blog for 
+                    interaction purposes. This becomes a great platform for me to interact with
+                    interested parties.
+                </p>
+                <p>
+                    Among a wide range of users who visit this blog, the story behind me creating this blog 
+                    was to interact with, 
+                </p>
+                <div class="text-start">
+                    <ul>
+                        <li><strong>Developers</strong></li>
+                        <p>
+                            Being a full-stack software developer, I come across a lot of fellow software
+                            developers. I intended in intaracting with this guys in order to exchange ideas, 
+                            learning from me and me from them.
+                        </p>
+                        <li><strong>Clients</strong></li>
+                        <p>
+                            Clients who are interested in my services can get in touch with me here if 
+                            they don't already have my email address. A number also comes here to see 
+                            how other users are talking about my services.
+                        </p>
+                        <li><strong>Software Development Students</strong></li>
+                        <p>
+                            A number of students comes here to learn. They get a chance to learn from me,
+                            other developers around here and from other students who are also here.
+                            I also tutor a number of students and most of them get to know me from this 
+                            ample space.
+                        </p>
+                    </ul>
+                </div>
+
+                <p>
+                    These but a few of the great people I meet here. I appreciate. Thank you all.
+                </p>
+
+        </div>
+
+    </div>
+</div>
