about me top introductory sections

--- a/Blog-UI/src/app/Components/about-blog/about-blog.component.html
+++ b/Blog-UI/src/app/Components/about-blog/about-blog.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="row">
 
-        <div class="col-md-8 mx-auto my-5 text-center aboutTop">
+        <div class="col-md-10 mx-auto my-5 text-center about">
 
             <!-- Heading -->
                 <h3 class="text-success"><strong>About The Blog</strong></h3>
@@ -43,6 +43,24 @@
                 <p>
                     These but a few of the great people I meet here. I appreciate. Thank you all.
                 </p>
+
+        </div>
+
+        <div class="col-md-6 mx-auto my-5 about text-center">
+
+            <!-- Heading -->
+            <h3 class="text-success"><strong>About Me</strong></h3>
+            <hr>
+            <p>
+                I am Vitalis, <span class="text-success"><strong>Kipyegon Kirui Vitalis</strong></span> to be detail.
+                A Full-Stack software developer by profession. My favorite choice of stack is <span class="text-success">
+                    <strong>MEAN Stack.</strong>
+                </span>
+            </p>
+            <p>
+                That's me professionally in a single pharagraph though it doesn't really describe all my skillsets.
+                I also have a copy of my self in terms of other skills, passion, hobbies and me as I have described below.
+            </p>
 
         </div>
 
