--- a/Blog-UI/src/app/Components/about-blog/about-blog.component.html
+++ b/Blog-UI/src/app/Components/about-blog/about-blog.component.html
@@ -46,7 +46,7 @@
 
         </div>
 
-        <div class="col-md-6 mx-auto my-5 about text-center">
+        <div class="col-md-6 mx-auto about text-center">
 
             <!-- Heading -->
             <h3 class="text-success"><strong>About Me</strong></h3>
@@ -65,4 +65,152 @@
         </div>
 
     </div>
+
+    <!-- About Me detailed row -->
+    <div class="row">
+
+        <!-- Skills -->
+        <div class="col-md-3 mx-auto my-4 skills">
+            <div class="text-center">
+                <h3 class="text-success"><strong>Skills</strong></h3>
+                <hr>
+            </div>
+
+            <p>
+                As I have previously introduced myself, I am software developer | Engineer. This is
+                my major profession skillset. Aside from that, here are more skills I got;
+            </p>
+
+            <!-- Listing skills -->
+            <ul>
+                <li><strong>UI | UX Designer</strong></li>
+                <p>
+                    Being a software developer, I had to learn this set of skill for better and quality
+                    products. I pretty good in this area especially when am using <span class="text-success"><strong>Figma</strong></span>. 
+                </p>
+                <li><strong>Others</strong></li>
+                <p>
+                    I want to mention this skills without going in details,
+                </p>
+                <ul>
+                    <li>Video Editor | Adobe Premier</li>
+                    <li>Photo Editor | Adobe Photoshop</li>
+                    <li>Professional Driver</li>
+                </ul>
+            </ul>
+
+        </div>
+
+        <!-- Passions -->        
+        <div class="col-md-4 mx-auto my-4 passions">
+            <div class="text-center">
+                <h3 class="text-success"><strong>Passion</strong></h3>
+                <hr>
+            </div>
+
+            <p>
+                These is the outside me, these are stuff I like the most. I won't be going in details in some 
+                of them but, let me mention just but a few.
+            </p>
+
+            <!-- Listing Passions -->
+            <ul>
+
+                <!-- Tech -->
+                <li><strong>Technology</strong></li>
+                <p>
+                    These is basically the reason why I am a software developer.
+                    I always like tech stuff, this urge and love made me who I am. I didn't want to be just
+                    the kind who love the what tech is doing out there, I wanted to be part of it. 
+                </p>
+                <p>
+                    And so, here I am, enjoying myself as part of those making strides in tech Innovation.
+                </p>
+
+                <!-- Wildlife -->
+                <li><strong>Wildlife</strong></li>
+                <p>
+                    Outside Tech, I am a Wildlife person. My favorite animal is an Elephant, don't get me wrong,
+                    I love all kind of wild animals but if I was to pick me spirit animal? then that's it.
+                </p>
+                <p>
+                    These passion came about me living adjustcent to <span class="text-success"><strong>Masai Mara</strong></span>,
+                    I got a lot of time being there.
+                </p>
+                <p>
+                    I said wildlife in the sense that it includes wild species, these are plants. I love a well conserved
+                    environment with natural species.
+                </p>
+                <p>
+                    These are my top two, that I feel like I won't enjoy my life best without them. I got some more but, let me leave it there 
+                    for now.
+                </p>
+            </ul>
+
+        </div>
+
+        <!-- Hobbies -->
+        <div class="col-md-5 mx-auto my-4 hobbies">
+            <div class="text-center">
+                <h3 class="text-success"><strong>Hobbies</strong></h3>
+                <hr>
+            </div>
+            <p>
+                Wanna spent time with me? I won't resist whatever we going to do
+                if they are in this list.
+            </p>
+
+            <!-- Hobbies list -->
+            <ul>
+                <!-- Football -->
+                <li><strong>Watching | Playing Football</strong></li>
+                <p>
+                    I am a sport person in general, Football being at the top of the list. So taking part in 
+                    playing or watching will do just fine. Playing, I playing either wings of attack because I can either 
+                    leg to shoot. I would prefer the right side though.
+                </p>
+                <p>
+                    I am a <span class="text-success"><strong>Chelsea</strong></span> fan, yes, Blue is the color!. I believe 
+                    <span class="text-success"><strong>Messi</strong></span> to be the best football player of all time. These 
+                    doesn't meant I hate the likes of CR7, no, I appreciate their talent but Messi goes at the top.
+                </p>
+
+                <!-- Movies -->
+                <li><strong>Movies</strong></li>
+                <p>
+                    I am a movie person, after a long day of coding, a coffee plus a movies is my 
+                    routine. I am into Adventure, Investigative and Tech movies. I doesn't matter if they single 
+                    movie or a series.
+                </p>
+                <p>
+                    I have watched several them, let me leave my all time top five down here,
+                </p>
+                <ol>
+                    <li>The Blacklist | Series</li>
+                    <li>Vikings | Series</li>
+                    <li>Game of Throne | Series</li>
+                    <li>King Arthur | Single</li>
+                    <li>Godzilla The King of the Monsters | Single</li>
+                </ol>
+                <p>
+                    Just but a few.
+                </p>
+
+                <li><strong>Others</strong></li>
+                <p>
+                    Let me mention these without going in details
+                </p>
+
+                <ul>
+                    <li>Swimming</li>
+                    <li>Pillards</li>
+                    <li>Coding</li>
+                </ul>
+
+            </ul>
+
+        </div>
+
+    </div>
+
 </div>
