creating change password form

--- a/Blog-UI/src/app/Modules/authentication/Components/change-password/change-password.component.html
+++ b/Blog-UI/src/app/Modules/authentication/Components/change-password/change-password.component.html
@@ -1,1 +1,57 @@
-<p>change-password works!</p>
+<div class="container-fluid">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-4 mx-auto my-5 form">
+
+                <!-- Change password -->
+                <h1 class="text-center">Change Password</h1>
+                <hr>
+
+                <form [formGroup]="updateForm" (ngSubmit)="updatePassword()">
+
+                    <!-- Old password -->
+                    <div class="form-group">
+                        <label for="" class="text-success mb-1"><strong>Enter your old password</strong></label>
+                        <input type="password" class="form-control" name="oldpassword" formControlName="oldpassword"
+                            [class.is-invalid]="oldpassword?.invalid && oldpassword?.dirty">
+                    </div>
+
+                    <!-- Old password error message -->
+                    <div class="text-danger" *ngIf="oldpassword?.invalid && oldpassword?.dirty">
+                        <small *ngIf="oldpassword?.errors?.['required']">Old password is required</small>
+                    </div>
+
+                    <!-- New password -->
+                    <div class="form-group">
+                        <label for="" class="text-success mb-1 mt-3"><strong>Enter new password</strong></label>
+                        <input type="password" class="form-control" name="newpassword" formControlName="password"
+                            [class.is-invalid]="newpassword?.invalid && newpassword?.dirty">
+                    </div>
+
+                    <!-- New password error messages -->
+                    <div class="text-danger" *ngIf="newpassword?.invalid && newpassword?.dirty">
+                        <small *ngIf="newpassword?.errors?.['required']">New password is required</small>
+                        <small *ngIf="newpassword?.errors?.['minlength']">Password must be at least 6 characters</small>
+                    </div>
+
+                    <!--Confirm new password  -->
+                    <div class="form-group">
+                        <label for="" class="text-success mb-1 mt-3"><strong>Confirm new password</strong></label>
+                        <input type="password" class="form-control" name="confirmnewpassword"
+                            formControlName="confirmpassword"
+                            [class.is-invalid]="updateForm.errors?.['passwordMismatch']">
+                    </div>
+
+                    <div class="text-danger">
+                        <!-- Password mismatch error message -->
+                        <small *ngIf="updateForm.errors?.['passwordMismatch']">Password do not match</small>
+                    </div>
+
+                    <!-- Verify button -->
+                    <button class="btn btn-success m-3" type="submit" [disabled]="updateForm.invalid">Update</button>
+                </form>
+
+            </div>
+        </div>
+    </div>
+</div>
