--- a/Blog-UI/src/app/app.component.css
+++ b/Blog-UI/src/app/app.component.css
@@ -1,5 +1,5 @@
 .container-fluid{
-    background-color: aliceblue;
+    background-color:rgb(227, 236, 242);
     padding-top: 2%;
     padding-bottom: 2%;
 }
