--- a/Blog-UI/src/app/Modules/authentication/Components/change-password/change-password.component.html
+++ b/Blog-UI/src/app/Modules/authentication/Components/change-password/change-password.component.html
@@ -4,7 +4,7 @@
             <div class="col-md-4 mx-auto my-5 form">
 
                 <!-- Change password -->
-                <h1 class="text-center">Change Password</h1>
+                <h2 class="text-center"><strong>Change Password</strong></h2>
                 <hr>
 
                 <form [formGroup]="updateForm" (ngSubmit)="updatePassword()">
